--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "wig"]
+	path = wig
+	url = https://github.com/ramiromagno/wig
+	shallow = true
+	registered = true
